# nash-2.0

./: .gitignore  CMakeLists.txt  Makefile  README.md  check.cpp  checker.cpp  checker.hpp  game.cpp  game.h  graph-iter.cpp  graph-iter.h  install_and_launch.sh  main.cpp  sat-test.cpp  sat.cpp  sat.h  strategy.h  triangle.txt
graphs/: c22_contrexample  double-initial-no-term.txt  double-initial.txt  first-proof-optimized.txt  funny-one.txt  max_test  max_test2  one_cycle_argument  quadriple_double_cycle.txt  quadriple_double_cycle2.txt  reverse-triangle.txt  three-cycle.txt  triangle-c22.txt  triangle-no-nash.txt  triangle.txt  two-cycles.txt
graphs-with-players/: initial.txt  max_test2  reverse-triangle.txt  three-cycle-no-nash.txt  triangle-c22.txt
include/: checker.hpp  game.h  graph-iter.h  output-colors.h  sat.h  strategy.h
nauty-graphs/: from-directg.d6
src/: check.cpp  checker.cpp  game.cpp  graph-iter.cpp  main.cpp  sat.cpp
